[metadata]
name = nanome-jax
version = 1.3.2
author = Yang Liu
author_email = yang.liu@jax.org
description = NANOME (Nanopore methylation) pipeline developed by Li Lab at The Jackson Laboratory
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TheJacksonLaboratory/nanome
project_urls =
	Bug Tracker = https://github.com/TheJacksonLaboratory/nanome/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
package_dir =
	= src
scripts =
	src/nanocompare/read_level_eval.py
	src/nanocompare/site_level_eval.py
	src/nanocompare/tss_eval.py
	src/nanocompare/computeRawReadsCoverage.py
	src/plot_figure.py
	utils/FilesSeparator.py
	utils/clean_old_basecall_in_fast5.py
	utils/extract_methylation_fast5_support_dir.py
	utils/combination_model_prediction.py
	utils/gen_readme.py
	utils/hm_cluster_predict.py
	utils/sum_chr_mod.py
	utils/tombo_extract_per_read_stats.py

# conda install rocksdb is needed for python-rocksdb
install_requires =
	biopython
	pybedtools
	pandas
	seaborn
	scipy
	numpy
	statsmodels
	scikit-learn
	matplotlib
	jinja2
	openpyxl
	h5py
	tqdm
	joblib
	psutil

[options.packages.find]
where = src